--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,14 +1,14 @@
 /* src/index.css */
 @import "tailwindcss";
-
-
-
+@plugin "daisyui";
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap'); */
 
 /* =======================
    Global Styles & Reset
    ======================= */
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  width: 100%;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
@@ -71,14 +71,9 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
-  color: white;
+
   cursor: pointer;
   transition: border-color 0.25s ease, opacity 0.25s ease;
-}
-button:hover {
-  border-color: #646cff;
-  opacity: 0.9;
 }
 button:focus,
 button:focus-visible {
